--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,24 @@ body {
     font-size: 16px;
 }
 
+:root {
+    --border-radius: 5px;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #242C28;
+    border-radius: var(--border-radius);
+}
+
+::-webkit-scrollbar-thumb {
+    background: #44C1FF;
+    border-radius: var(--border-radius);
+}
+
 .nav-link {
      font-size: 14px !important;
      background: transparent !important;
@@ -285,3 +303,47 @@ color: rgba(255, 255, 255, 0.46) !important
         height: 200px;
     }
 }
+
+.admin {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    padding: 16px;
+    overflow-y: scroll;
+    max-height: 200px;
+    scroll-snap-type: y mandatory;
+}
+
+.itemek {
+    min-width: 220px;
+    min-height: 200px;
+    color: white;
+    display: flex;
+    border-radius: 10px;
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.1);
+    transition: all 0.2s;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    scroll-snap-align: start;
+}
+
+.photosss {
+    height: 200px;
+    margin-bottom: 50px;
+}
+
+.nouridio3 {
+    font-family: 'Montserrat' !important;
+    font-style: normal !important;
+    font-weight: 600 !important;
+    font-size: 30px !important;
+    line-height: 5px !important;
+    letter-spacing: 0.15em !important;
+    font-variant: small-caps !important;
+    color: white !important;
+    text-align: center !important;
+    margin-top: 40px !important;
+    margin-top: 1000px !important;
+}
+
